@@ -1,3 +1,8 @@
+2006-04-17  Ray Strode <rstrode@redhat.com>
+
+       * gnome-settings-mouse.c (configure_button_layout): fix
+       potential (tiny, hard to trigger) overrun (bug 338254)
+
 2006-04-10  Marien Zwart <marienz@gentoo.org>
 
 	Fixes #323724
